fix mobile spacing

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -33,17 +33,17 @@
 	}
 
 	#header p {
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 	#header nav {
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 		#header nav a:hover {
-			font-size: 14px;
+			font-size: 12px;
 		}
 
 		#header nav a:active {
-			font-size: 14px;
+			font-size: 12px;
 		}
