--- a/css/style-mobilep.css
+++ b/css/style-mobilep.css
@@ -19,5 +19,5 @@
 /* Header */
 	
 	#header nav {
-		padding: 0 14px;
+		padding: 0 12px;
 	}
